# numerical-propagator-sdn-plugin

./: README.md  plugin-manifest.json
src/cpp/: CMakeLists.txt  wasm_api.cpp
src/cpp/include/numerical_prop/: propagator.h
src/cpp/src/: propagator.cpp
src/cpp/tests/: test_propagator.cpp
